syntax = "proto3";

import "google/protobuf/wrappers.proto";

option java_package = "io.timemates.api.timers.requests";

message EditTimerSettingsRequest {
  optional int64 timerId = 1;

  optional int32 workTime = 2;
  optional int32 restTime = 3;
  optional int32 bigRestTime = 4;
  optional bool bigRestEnabled = 5;
  optional int32 bigRestPer = 6;
  optional bool isEveryoneCanPause = 7;
  optional bool isConfirmationRequired = 8;
}