syntax = "proto3";

option java_package = "io.timemates.api.timers.members.invites.types";

message Invite {
  string code = 1;
  int64 creationTime = 2;
  int32 limit = 3;
}